[gd_scene load_steps=6 format=3 uid="uid://dg2ipfodeqcgl"]

[ext_resource type="Script" path="res://scenes/menu.gd" id="1_76yhm"]
[ext_resource type="Texture2D" uid="uid://d3k8g3uhx4rbh" path="res://sprites/blank_button.png" id="2_t81o1"]
[ext_resource type="Texture2D" uid="uid://d3u78irw4g4x5" path="res://sprites/solid_back.png" id="2_tguqa"]
[ext_resource type="FontFile" uid="uid://nqjb4i5me8bl" path="res://fonts/MinimalPixelFont.ttf" id="3_hlfbb"]

[sub_resource type="LabelSettings" id="LabelSettings_wrpr2"]
font = ExtResource("3_hlfbb")
font_size = 96
shadow_color = Color(0.14902, 0.168627, 0.266667, 1)
shadow_offset = Vector2(0, 6)

[node name="Menu" type="Node2D"]
script = ExtResource("1_76yhm")

[node name="background" type="Node2D" parent="."]
texture_filter = 1
texture_repeat = 3

[node name="Sprite2D" type="Sprite2D" parent="background"]
texture_filter = 1
position = Vector2(636.5, 364.5)
scale = Vector2(0.972656, 0.979167)
texture = ExtResource("2_tguqa")

[node name="Play" type="Button" parent="."]
custom_minimum_size = Vector2(0.995, 0)
offset_left = 495.0
offset_top = 279.0
offset_right = 731.0
offset_bottom = 394.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(103.15, 50.94)
flat = true

[node name="Sprite2D" type="Sprite2D" parent="Play"]
texture_filter = 1
texture_repeat = 2
position = Vector2(110.25, 58.6667)
scale = Vector2(4.59375, 7)
texture = ExtResource("2_t81o1")

[node name="Label" type="Label" parent="Play"]
texture_filter = 1
texture_repeat = 1
layout_mode = 1
anchors_preset = -1
anchor_left = -0.34406
anchor_top = -0.0079111
anchor_right = -0.34406
anchor_bottom = -0.0079111
offset_left = 90.0372
offset_top = 2.25893
offset_right = 291.037
offset_bottom = 88.2589
text = "PLAY"
label_settings = SubResource("LabelSettings_wrpr2")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="mouse_entered" from="Play" to="." method="_on_play_mouse_entered"]
[connection signal="mouse_exited" from="Play" to="." method="_on_play_mouse_exited"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
